--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,16 +1,17 @@
 cmake_minimum_required(VERSION 3.10)
-
 project(SystemMonitor)
 
 set(CMAKE_CXX_STANDARD 17)
 
-include_directories(include)
-file(GLOB SOURCES "src/*.cpp")
+# Find ncurses
+find_package(Curses REQUIRED)
+include_directories(${CURSES_INCLUDE_DIR})
 
-add_executable(SystemMonitor ${SOURCES}
-        src/CPUMonitor.cpp
-        include/CPUMonitor.h
-        src/MemoryMonitor.cpp
-        include/MemoryMonitor.h
+# Your source files
+add_executable(SystemMonitor
+        src/main.cpp
         src/MonitorUI.cpp
-        include/MonitorUI.h)
+)
+
+# Link with ncurses
+target_link_libraries(SystemMonitor ${CURSES_LIBRARIES})
