--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,15 +3,16 @@ project(SystemMonitor)
 
 set(CMAKE_CXX_STANDARD 17)
 
-# Find ncurses
 find_package(Curses REQUIRED)
 include_directories(${CURSES_INCLUDE_DIR})
 
-# Your source files
 add_executable(SystemMonitor
         src/main.cpp
         src/MonitorUI.cpp
+        src/ProcessParser.cpp
 )
+
+target_link_libraries(SystemMonitor ${CURSES_LIBRARIES})
 
 # Link with ncurses
 target_link_libraries(SystemMonitor ${CURSES_LIBRARIES})
